--- a/Win32/Debug/config.ini
+++ b/Win32/Debug/config.ini
@@ -4,4 +4,4 @@ Username=root
 Password=rootroot
 Server=localhost
 Port=3306
-Library=C:\dev\Projeto Delphi Novo\libmysql.dll
+Library=C:\dev\teste_delphi\libmysql.dll
